--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 <!--header-->
             <nav class="flex flex-row justify-between lg:justify-evenly font-extrabold p-3 px-5">
                 <a href="#" class="block py-5 lg:hidden">
-                    <img src="../dist/images/Polygon 3.svg" alt="back-to" class="h-4">
+                    <img src="./images/Polygon 3.svg" alt="back-to" class="h-4">
                 </a>
                 <div>
-                    <img src="../dist/images/Logo 3.svg" alt="logo" >
+                    <img src="./images/Logo 3.svg" alt="logo" >
                 </div>
                 <button>
-                    <img src="../dist/images/MenuBtn.svg" alt="menu" class="h-4 lg:hidden">
+                    <img src="./images/MenuBtn.svg" alt="menu" class="h-4 lg:hidden">
                 </button>
                 <div class="w-1/3 text-center items-center justify-around text-white hidden lg:flex"
                 >
@@ -37,16 +37,16 @@
             <div class="flex flex-col text-center mt-5 md:mt-10 p-3">
                 <ul class="flex justify-center">
                     <li class="h-10 w-10">
-                        <img src="../dist/images/LifeR1 2.svg" alt="rune-life">
+                        <img src="./images/LifeR1 2.svg" alt="rune-life">
                     </li>
                     <li class="h-10 w-10">
-                        <img src="../dist/images/HitR3 2.svg" alt="rune-hit">
+                        <img src="./images/HitR3 2.svg" alt="rune-hit">
                     </li>
                     <li class="h-10 w-10">
-                        <img src="../dist/images/LightR2.svg" alt="rune-light">
+                        <img src="./images/LightR2.svg" alt="rune-light">
                     </li>
                     <li class="h-10 w-10">
-                        <img src="../dist/images/DemonR3.svg" alt="rune-demon">
+                        <img src="./images/DemonR3.svg" alt="rune-demon">
                     </li>
                 </ul>
                 <span class="block font-serif text-xl lg:text-4xl">BIENVENIDOS A</span>
@@ -70,7 +70,7 @@
                                 <a href="#" class="block text-center text-sm m-2 shadow-md bg-orange w-2/3 md:w-1/2 lg:w-2/3 p-3 rounded">Ver detalles</a>
                             </div>
                             <div class="w-1/3">
-                                <img src="../dist/images/Rectangle 4.svg" alt="pack humano" class="h-full w-full">
+                                <img src="./images/Rectangle 4.svg" alt="pack humano" class="h-full w-full">
                             </div>
                         </div>
                         <!--end card-->
@@ -82,7 +82,7 @@
                                 <a href="#" class="block text-center text-sm m-2 shadow-md bg-orange w-2/3 md:w-1/2 lg:w-2/3 p-3 rounded">Ver detalles</a>
                             </div>
                             <div class="w-1/3">
-                                <img src="../dist/images/Rectangle 5.svg" alt="pack de demonios" class="h-full w-full">
+                                <img src="./images/Rectangle 5.svg" alt="pack de demonios" class="h-full w-full">
                             </div>
                         </div>
                         <!--end card-->
@@ -101,7 +101,7 @@
                                 <a href="#" class="block text-center text-sm m-2 shadow-md bg-orange w-2/3 md:w-1/2 lg:w-2/3 p-3 rounded">Ver detalles</a>
                             </div>
                             <div class="w-1/3">
-                                <img src="../dist/images/Rectangle 4.svg" alt="pack humano" class="h-full w-full">
+                                <img src="./images/Rectangle 4.svg" alt="pack humano" class="h-full w-full">
                             </div>
                         </div>
                         <!--end card-->
@@ -113,7 +113,7 @@
                                 <a href="#" class="block text-center text-sm m-2 shadow-md bg-orange w-2/3 md:w-1/2 lg:w-2/3 p-3 rounded">Ver detalles</a>
                             </div>
                             <div class="w-1/3">
-                                <img src="../dist/images/Rectangle 5.svg" alt="pack de demonios" class="h-full w-full">
+                                <img src="./images/Rectangle 5.svg" alt="pack de demonios" class="h-full w-full">
                             </div>
                         </div>
                         <!--end card-->
@@ -125,7 +125,7 @@
                                 <a href="#" class="block text-center text-sm m-2 shadow-md bg-orange w-2/3 md:w-1/2 lg:w-2/3 p-3 rounded">Ver detalles</a>
                             </div>
                             <div class="w-1/3">
-                                <img src="../dist/images/Rectangle 7.svg" alt="runas" class="h-full w-full">
+                                <img src="./images/Rectangle 7.svg" alt="runas" class="h-full w-full">
                             </div>
                         </div>
                         <!--end card-->
@@ -137,7 +137,7 @@
                                 <a href="#" class="block text-center text-sm m-2 shadow-md bg-orange w-2/3 md:w-1/2 lg:w-2/3 p-3 rounded">Ver detalles</a>
                             </div>
                             <div class="w-1/3">
-                                <img src="../dist/images/Rectangle 8.svg" alt="humano" class="h-full w-full">
+                                <img src="./images/Rectangle 8.svg" alt="humano" class="h-full w-full">
                             </div>
                         </div>
                         <!--end card-->
@@ -149,7 +149,7 @@
                                 <a href="#" class="block text-center text-sm m-2 shadow-md bg-orange w-2/3 md:w-1/2 lg:w-2/3 p-3 rounded">Ver detalles</a>
                             </div>
                             <div class="w-1/3">
-                                <img src="../dist/images/Rectangle 9.svg" alt="demonio" class="h-full w-full">
+                                <img src="./images/Rectangle 9.svg" alt="demonio" class="h-full w-full">
                             </div>
                         </div>
                         <!--end card-->
@@ -161,7 +161,7 @@
                                 <a href="#" class="block text-center text-sm m-2 shadow-md bg-orange w-2/3 md:w-1/2 lg:w-2/3 p-3 rounded">Ver detalles</a>
                             </div>
                             <div class="w-1/3">
-                                <img src="../dist/images/Rectangle 10.svg" alt="runas-fusion" class="h-full w-full">
+                                <img src="./images/Rectangle 10.svg" alt="runas-fusion" class="h-full w-full">
                             </div>
                         </div>
                         <!--end card-->
